src/test/ui/issues/issue-21554.stderr
error[E0606]: casting `[constructor of {Inches}: fn(i32) -> Inches]` as `f32` is invalid
  --> $DIR/issue-21554.rs:4:5
   |
LL |     Inches as f32;
   |     ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0606`.
